# SEPreference

./: CMakeLists.txt  LICENSE.txt  README.md  Simulator_Exchanging_Protokoll_V0.96.odt  jsonexample.cpp  sepreference-vs19.sln  sepreference-vs19.vcxproj  sepreference-vs19.vcxproj.filters  sepreference.sln  sepreference.vcxproj  sepsend.cpp  sepsend.hpp  simulatorExchangeReceiver.hpp  simulatorExchangeSender.cpp  simulatorExchangeSender.hpp  telegram.cpp  telegram.hpp  telegramDescriber.cpp  telegramDescriber.hpp
spec/: Simulator_Exchanging_Protokoll_V0.94.odt  Simulator_Exchanging_Protokoll_V0.95.odt  Simulator_Exchanging_Protokoll_V0.97.odt  Simulator_Exchanging_Protokoll_V0.98.odt  Simulator_Exchanging_Protokoll_V0.99.odt
